--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,16 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./rainbow.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/rainbow.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="My portfolio"
     />
     <link rel="apple-touch-icon" href="./rainbow.ico" />
-    
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&family=Qwigley&family=Acme&family=Press+Start+2P&display=swap" rel="stylesheet">
+  <!-- font-family: 'Sedgwick Ave Display', cursive; 'Qwigley' , cursive; 'Acme', sans-serif; 'Press Start 2P', cursive; -->
     <title>JB Portfolio</title>
   </head>
   <body>
