--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/rainbow.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="My portfolio"
+    <meta name="description" content="Portfolio de Jérôme Burrus France"
     />
     <link rel="apple-touch-icon" href="./rainbow.ico" />
 
