improve thumbnail link

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/rainbow.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Portfolio de Jérôme Burrus France">
+    <meta name="description" content="Portfolio de Jérôme Burrus &#127467;&#127479;">
+    <meta name="title" property="og:title" content="Portfolio Jérôme Burrus &#127467;&#127479;" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://nsm09.casimages.com/img/2021/05/19//21051906564717254117424704.png" />
+    <meta name="description" property="og:description" content="Portfolio de Jérôme Burrus &#127467;&#127479; développé en REACT" />
+
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Portefolio de Jérôme Burrus &#127467;&#127479;">
     <meta name="twitter:description" content="CV intercatif, développé en REACT">
     <meta name="twitter:image" content="https://nsm09.casimages.com/img/2021/05/19//21051906564717254117424704.png">
     <meta property="og:image" content="https://nsm09.casimages.com/img/2021/05/19//21051906564717254117424704.png" />
+
+    
     <link rel="apple-touch-icon" href="./rainbow.ico" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
